--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <lib-toastify-toast-container></lib-toastify-toast-container>
+<app-loading *ngIf="isLoading"></app-loading>
 <router-outlet></router-outlet>
