--- a/src/app/modules/authentication/layout/authentication-layout.component.html
+++ b/src/app/modules/authentication/layout/authentication-layout.component.html
@@ -1,3 +1,7 @@
 <section id="authentication-layout">
-  <router-outlet></router-outlet>
+  <article>
+    <img src="/assets/images/logo.png" />
+
+    <router-outlet></router-outlet>
+  </article>
 </section>
