--- a/src/app/modules/authentication/layout/authentication-layout.component.scss
+++ b/src/app/modules/authentication/layout/authentication-layout.component.scss
@@ -1,4 +1,17 @@
 @import "base";
 
 #authentication-layout {
+  @extend .app-container;
+  @apply min-w-full min-h-screen flex items-center justify-center;
+
+  > article {
+    @apply w-2/5 p-8 rounded-2xl shadow-md flex flex-col items-center;
+    @apply sm:w-full;
+
+    > img {
+      @apply w-36 h-36;
+    }
+
+    background: $bg-secondary;
+  }
 }
