--- a/src/app/modules/authentication/pages/login/login.component.html
+++ b/src/app/modules/authentication/pages/login/login.component.html
@@ -1,3 +1,14 @@
-<section id="login">
-  <span>LOGIN</span>
-</section>
+<form id="login">
+  <div>
+    <label for="email">e-mail</label>
+    <input type="email" id="email" name="email" />
+  </div>
+
+  <div>
+    <label for="password">Senha</label>
+    <input type="password" id="password" name="password" />
+  </div>
+
+  <button>Entrar</button>
+  <a>Cadastre-se</a>
+</form>
