--- a/src/app/modules/authentication/pages/login/login.component.scss
+++ b/src/app/modules/authentication/pages/login/login.component.scss
@@ -1,4 +1,15 @@
 @import "base";
 
 #login {
+  @apply w-full flex flex-col items-center;
+
+  > div {
+    @apply w-full;
+    @extend .form-group;
+  }
+
+  > button {
+    @apply mb-4;
+    @extend .btn-primary;
+  }
 }
