--- a/src/app/modules/authentication/layout/authentication-layout.component.html
+++ b/src/app/modules/authentication/layout/authentication-layout.component.html
@@ -2,6 +2,8 @@
   <article>
     <img src="/assets/images/logo.png" />
 
-    <router-outlet></router-outlet>
+    <main>
+      <router-outlet></router-outlet>
+    </main>
   </article>
 </section>
